--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,6 @@ main {
     border-bottom: none; /* Brak linii dla ostatniego elementu listy */
 }
 
-
 .rules-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
@@ -94,6 +93,12 @@ main {
 h3 {
     color: #2bc3e2;
     margin: 0 0 10px 0;
+}
+
+.highlight {
+    color: #E30B5C; /* Malinowy kolor */
+    font-weight: bold;
+    margin-bottom: 10px;
 }
 
 .last-updated {
